[gd_scene load_steps=2 format=3 uid="uid://c7j20avh3m4rj"]

[ext_resource type="Script" path="res://addons/flowkit/ui/modals/select_action.gd" id="1_action"]

[node name="SelectAction" type="PopupPanel"]
oversampling_override = 1.0
title = "Select an Action"
initial_position = 1
size = Vector2i(400, 320)
borderless = false
keep_title_visible = true
unresizable = false
script = ExtResource("1_action")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SearchBox" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Search..."

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
custom_minimum_size = Vector2(0, 60)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/DescriptionPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
